--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "oi_checker"
-version = "0.1.0-dev20230122.12"
+version = "0.1.0-dev20230122.13"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,3 +10,4 @@ console = "0.15.4"
 toml = "0.5.10"
 serde = { version = "1.0.152", features = ["default", "derive"]}
 clap = "4.0.32"
+threadpool = "1.8.1"
