--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,18 @@
 [package]
 name = "oi_checker"
-version = "1.0.0-alpha.1"
+version = "1.0.0-alpha.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-console = "0.15.4"
-toml = "0.5.10"
-serde = { version = "1.0.152", features = ["default", "derive"]}
+console = "0.15.5"
+toml = "0.5.11"
+serde = { version = "1.0.152", features = ["default", "derive"] }
 clap = "4.1.1"
 threadpool = "1.8.1"
 dyn_formatting = "1.0.1"
+once_cell = "1.17.0"
 
 [build-dependencies]
 embed-resource = "1.8.0"
